# siobrultech-protocols

./: .gitignore  .pre-commit-config.yaml  Earthfile  LICENSE  README.md  pyproject.toml  pyrightconfig.json  renovate.json  requirements-dev.txt  setup.cfg  setup.py
.github/: auto-merge.yml  dependabot.yml
.github/workflows/: build.yml  lint.yml  publish.yml
scripts/: version_bump.py
siobrultech_protocols/gem/: api.py  const.py  fields.py  packets.py  protocol.py  streams.py
tests/: test_requirements.py
tests/gem/: mock_gem.py  mock_transport.py  packet_test_data.py  test_api.py  test_bidirectional_protocol.py  test_fields.py  test_packets.py  test_protocol.py  test_streams.py
