[metadata]
name = siobrultech-protocols
version = 0.8.0a0
author = Shawn Wilsher
author_email = me@shawnwilsher.com
description = A Sans-I/O Python client library for Brultech Devices
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers = 
	Development Status :: 4 - Beta
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
project_urls = 
	Bug Reports = https://github.com/sdwilsh/siobrultech-protocols/issues
	Release Notes = https://github.com/sdwilsh/siobrultech-protocols/releases/
	Source = https://github.com/sdwilsh/siobrultech-protocols

[options]
python_requires = >3.8, <4
packages = find:

[options.package_data]
siobrultech_protocols = py.typed

[flake8]
max-line-length = 88
max-complexity = 10
select = E9,F63,F7,F82

